Carry over JVM flags