@@ -23,5 +23,4 @@ ENV PORT 3000
 
 ENTRYPOINT ["java"]
 
-VOLUME ["/db"]
-CMD ["-jar", "/var/lib/deploy/ocpu-balancer.jar"]
+CMD ["-jar", "/var/lib/deploy/ocpu-balancer.jar", "-server", "-XX:+UseConcMarkSweepGC", "-Xmx1g"]
